--- a/Segundo_Examen/carrito.html
+++ b/Segundo_Examen/carrito.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
-    <script src="./script.js" defer></script>
 </head>
 <body>
     <header>
@@ -14,7 +13,7 @@
             <h1><span>Taco</span>Palace</h1>
             <input id="username" type="text" placeholder="email">
             <button id="loginBtn">Login</button>
-            <img  src="./assets/carrito.png" alt="carro">
+            <a href="carrito.html"><img  src="./assets/carrito.png" alt="carro"></a>
             <h4 id="carritoCantidad">0</h4>
         </div>
     </header>
@@ -36,24 +35,11 @@
     </nav>
     <aside>
         <div class="subcontenedor">
-            <div class="info">
-                <h2>La mejor variedad en platillos de comida mexicana</h2>
-                <h3>Contamos con servicio a domicilio</h3>
-            </div>
-            <img id="imagen" src="./assets/comida-mexicana.jpg">
+            <h2>Carrito de compras</h2>
+            <ul id="carrito">
+                <script src="./carrito.js"></script>
+            </ul>
         </div>
-        <div class="recomendacion">
-            <h1>Recomendados:</h1>
-            <img src="./assets/orden-tacos.jpg" alt="mapa">
-            <h3>Orden de tacos</h3>
-            <a href="#">Ver mas</a>
-            <button class="btn" onclick="agregarProducto('tacos', 1)"><img src="./assets/plus.png" alt="circulo"></button>
-            <div class="recomendacion">
-                <img src="./assets/orden-flautas.jpg" alt="mapa">
-                <h3>Orden de flauta </h3>
-                <a href="#">Ver mas</a>
-                <a href="carrito.html"><button class="btn" onclick="agregarProducto('Producto1', 10)"><img src="./assets/plus.png" alt="circulo"></a></button>
-            </div>
         </div>
     </aside>
     <footer>
